[metadata]
name = molecule-openstack
url = https://github.com/ansible-community/molecule-openstack
project_urls =
    Bug Tracker = https://github.com/ansible-community/molecule-openstack/issues
    Release Management = https://github.com/ansible-community/molecule-openstack/projects
    CI = https://github.com/ansible-community/molecule-openstack/actions
    Discussions = https://github.com/ansible-community/molecule/discussions
    Source Code = https://github.com/ansible-community/molecule-openstack
description = Molecule OpenStack Plugin :: run molecule tests on openstack
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Ansible by Red Hat
author_email = info@ansible.com
maintainer = Ansible by Red Hat
maintainer_email = info@ansible.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

    Topic :: System :: Systems Administration
    Topic :: Utilities

keywords =
    ansible
    roles
    testing
    molecule
    plugin
    openstack

[options]
use_scm_version = True
python_requires = >=3.8
packages = find:
include_package_data = True
zip_safe = False

# These are required in actual runtime:
install_requires =
    molecule >= 3.4.0
    pyyaml >= 5.1, < 6

[options.extras_require]
test =
    molecule[test]

[options.entry_points]
molecule.driver =
    openstack = molecule_openstack.driver:Openstack

[options.packages.find]
where = .
